--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,13 @@
   background-size: cover;
 }
 
+.app-container{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 5%;
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
